--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "description": "simple kanban view.",
   "scripts": {
-    "build:client": "webpack --progress --colors --watch --config ./webpack.config.client.js",
-    "build:server": "webpack --progress --colors --watch --config ./webpack.config.server.js"
+    "build:static:local": "webpack --progress --colors --watch --config ./webpack.config.static.local.js",
+    "build:static:dev": "webpack --progress --colors --watch --config ./webpack.config.static.dev.js",
+    "build:node:local": "webpack --progress --colors --watch --config ./webpack.config.node.local.js",
+    "build:node:dev": "webpack --progress --colors --watch --config ./webpack.config.node.dev.js"
   },
   "author": "vvatanabe",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "@types/body-parser": "^1.16.3",
     "@types/dotenv": "4.0.0",
     "@types/express": "^4.0.36",
+    "@types/hiredis": "^0.5.0",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/localforage": "0.0.34",
     "@types/moment": "2.13.0",
@@ -36,9 +39,11 @@
     "webpack": "2.6.0"
   },
   "dependencies": {
+    "@types/redis": "^2.6.0",
     "dotenv": "4.0.0",
     "es6-promise": "4.1.0",
     "express": "4.15.3",
+    "hiredis": "^0.5.0",
     "http": "0.0.0",
     "isomorphic-fetch": "2.2.1",
     "isomorphic-form-data": "1.0.0",
@@ -57,6 +62,7 @@
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.1",
     "react-select": "1.0.0-rc.5",
+    "redis": "^2.7.1",
     "redux": "3.6.0",
     "redux-share-client": "git+https://github.com/baptistemanson/redux-share-client.git",
     "uuid": "3.0.1"
